# Binance-helper

./: ..gitig.swp  binance.py  checkerror.py  pyproject.toml
csv_data/: BTCUSDT_16-11-2021_15:05:00.csv
