[tool.poetry]
name = "binance-helper"
version = "0.1.0"
description = ""
authors = ["SanJack99 <shkvaryks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
